added "onClientGameRender" event for 3D rendering on internal GTA:SA camera; fixed .zip support; added RenderWare light and camera support; now it is possible to render things using Lua through RenderWare directly avoiding the GTA:SA object bottleneck; etc etc etc awesome-sauce...

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -921,6 +921,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\RenderWare\CRpLightSA.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\RenderWare\CRwCameraSA.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\RenderWare\CRwFrameSA.cpp"
 				>
 			</File>
@@ -945,6 +953,14 @@
 				</File>
 				<File
 					RelativePath=".\RenderWare\CRpAtomicSA.h"
+					>
+				</File>
+				<File
+					RelativePath=".\RenderWare\CRpLightSA.h"
+					>
+				</File>
+				<File
+					RelativePath=".\RenderWare\CRwCameraSA.h"
 					>
 				</File>
 				<File
