--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -1,16 +1,17 @@
 [Main]
-debug=true
+compile=false
+debug=false
 ; This is the position offset
 xOffset=0
 yOffset=0
 zOffset=300
-mtaBLUE=true
+mtaBLUE=false
 jetpackHeight=1000
 ; Available methods: stream, distance, static
 method=static
 static=false
 ; For LOD support
-lodSupport=false
+lodSupport=true
 ; Disregards LOD collision to save streamer memory
 forceLODInherit=true
 ; Enable the cache
