fixed random vehicle entering crash; fixed passenger enter crash; fixed CTaskSAInterface allocation and usage; added MTA:GREEN support to Scene2Res converter; etc

--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -1,17 +1,23 @@
-[Main]
+[General]
 compile=false
 debug=false
+mode=GREEN
+; For loading and displaying LOD models
+lodSupport=true
+; Do not replace models associated with GTA:SA buildings
+preserveMainWorldIntegrity=false
 ; This is the position offset
 xOffset=0
 yOffset=0
-zOffset=300
-mtaBLUE=false
+zOffset=1200
+
+[MainGREEN]
+
+[MainBLUE]
 jetpackHeight=1000
 ; Available methods: stream, distance, static
 method=static
 static=false
-; For LOD support
-lodSupport=true
 ; Disregards LOD collision to save streamer memory
 forceLODInherit=true
 ; Enable the cache
