reverse engineered the model loading algorithm; imported the vehicle model environment initialization; improved the texture and texDictionary handling (now not using GTA:SA slots anymore); fixed camera functions (now not crashing for EU build anymore); added per-entity collisions (WIP); cleaned up code-base (removed unused prototypes);

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -745,6 +745,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CStreamingSA.utils.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CTaskAllocatorSA.cpp"
 				>
 			</File>
@@ -1407,6 +1411,10 @@
 			</File>
 			<File
 				RelativePath=".\CStreamingSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CStreamingSA.utils.h"
 				>
 			</File>
 			<File
