improved MTA:Lua garbage collector and coroutine performance (reworked GC to a threaded architecture, replaced OS threads with fibers); started working on MTA RenderWare streaming extensions for performance improvements;

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -952,6 +952,10 @@
 				RelativePath=".\RenderWare\CTextureSA.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\RenderWare\RpGeometryStreamline.cpp"
+				>
+			</File>
 			<Filter
 				Name="Include"
 				>
@@ -989,6 +993,10 @@
 				</File>
 				<File
 					RelativePath=".\RenderWare\include.h"
+					>
+				</File>
+				<File
+					RelativePath=".\RenderWare\RpGeometryStreamline.h"
 					>
 				</File>
 			</Filter>
