improved MTA:Lua garbage collector performance; various comments added; WIP RenderWare object garbage collection; fixed RenderItem MD5 hash checksum tests;

--- a/lua_interpret/lua_interpret.vcproj
+++ b/lua_interpret/lua_interpret.vcproj
@@ -149,7 +149,7 @@
 				AdditionalLibraryDirectories="../vendor/lua/lib;../vendor/zlib/lib"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames="LIBCMT.lib"
-				GenerateDebugInformation="false"
+				GenerateDebugInformation="true"
 				AssemblyDebug="2"
 				TargetMachine="1"
 			/>
