--- a/MTA10/gui/gui 2008.vcproj
+++ b/MTA10/gui/gui 2008.vcproj
@@ -78,6 +78,8 @@
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/gui.pdb"
 				SubSystem="2"
+				EntryPointSymbol="_dllInit"
+				ResourceOnlyDLL="false"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)/gui.lib"
@@ -173,6 +175,8 @@
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				EntryPointSymbol="_dllInit"
+				ResourceOnlyDLL="false"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)/gui.lib"
@@ -268,6 +272,8 @@
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				EntryPointSymbol="_dllInit"
+				ResourceOnlyDLL="false"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)/gui.lib"
@@ -424,6 +430,14 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<Filter
+				Name="debugsdk"
+				>
+				<File
+					RelativePath="..\..\Shared\debugsdk\dbgheap.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -627,6 +641,14 @@
 				</File>
 				<File
 					RelativePath="..\sdk\gui\CGUIWindow.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="debugsdk"
+				>
+				<File
+					RelativePath="..\..\Shared\debugsdk\dbgheap.h"
 					>
 				</File>
 			</Filter>
