--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -94,6 +94,7 @@
 				MapExports="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				EntryPointSymbol="_dllInit"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				ImportLibrary=".\Release/game_sa.lib"
@@ -192,6 +193,7 @@
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug/game_sa_d.pdb"
+				EntryPointSymbol="_dllInit"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				ImportLibrary=".\Debug/game_sa_d.lib"
@@ -297,6 +299,7 @@
 				MapExports="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				EntryPointSymbol="_dllInit"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				ImportLibrary=".\Release/game_sa.lib"
@@ -916,6 +919,14 @@
 				RelativePath=".\TaskSecondarySA.cpp"
 				>
 			</File>
+			<Filter
+				Name="debugsdk"
+				>
+				<File
+					RelativePath="..\..\Shared\debugsdk\dbgheap.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="RenderWare"
@@ -1577,6 +1588,14 @@
 				RelativePath=".\TaskSecondarySA.h"
 				>
 			</File>
+			<Filter
+				Name="debugsdk"
+				>
+				<File
+					RelativePath="..\..\Shared\debugsdk\dbgheap.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
