- fixed setting anisotropy for textures in the model loader - improved MTA texture loading (now we also set max anisotropy depending on client fxQuality) - various additions (RwDeviceInformation, RwInterface::m_readTexture, ...) - fixed GTA:SA TXD and texture data assignment when loading

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -720,6 +720,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CRenderWareSA.rwapi.cpp"
+				>
+			</File>
+			<File
 				RelativePath="CRestartSA.cpp"
 				>
 			</File>
@@ -1402,6 +1406,10 @@
 			</File>
 			<File
 				RelativePath=".\CRenderWareSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CRenderWareSA.rwapi.h"
 				>
 			</File>
 			<File
