added some missing pools;

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -736,6 +736,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CRenderWareSA.pipeline.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CRenderWareSA.rwapi.cpp"
 				>
 			</File>
@@ -1458,6 +1462,10 @@
 			</File>
 			<File
 				RelativePath=".\CRenderWareSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CRenderWareSA.pipeline.h"
 				>
 			</File>
 			<File
