- improved collision loading for clumps and atomics - added GTA:SA RenderEntity logic into MTA + rewrote the multiplayer_sa hooks - fixed/improved GTA:SA clump stream collision loading (request based acquisition, removed wild clump loading entirely) - began working on entity.replaceTexture (tricky feature indeed) - removed outdated multiplayer_sa hooks - added advanced vehicle atomic rendering logic (sadly incompatible with GTA:SA, yet) - renamed RwAtomicRenderChainInterface into CRenderChainInterface + converted it into a template - extended internal rendering limits (raised translucent vehicle atomic render limit to 50 + misc) - fixed g_textureEmitter logic (now assigning for CTexDictionarySA only) - various fixes

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -476,6 +476,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CEntitySA.render.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CEntryInfoSA.cpp"
 				>
 			</File>
@@ -844,6 +848,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CVehicleSA.render.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CVehicleScannerSA.cpp"
 				>
 			</File>
@@ -1198,6 +1206,10 @@
 			</File>
 			<File
 				RelativePath="CEntitySA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CEntitySA.render.h"
 				>
 			</File>
 			<File
@@ -1566,6 +1578,10 @@
 			</File>
 			<File
 				RelativePath="CVehicleSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CVehicleSA.render.h"
 				>
 			</File>
 			<File
