- updated the core (now game, net and multiplayer module load before GTA:SA engine initialization) - added GTA:SA streaming resource functions

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -783,6 +783,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CStreamingSA.runtime.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CStreamingSA.utils.cpp"
 				>
 			</File>
@@ -1517,6 +1521,10 @@
 			</File>
 			<File
 				RelativePath=".\CStreamingSA.init.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CStreamingSA.runtime.h"
 				>
 			</File>
 			<File
