- Added GTA:SA streaming loader research (WIP; LoadAllRequestedModels, ...) - Added ModelCheckDispatch for more stable resource id region handling

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -1532,6 +1532,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CStreamingSA.utils.hxx"
+				>
+			</File>
+			<File
 				RelativePath=".\CTaskAllocatorSA.h"
 				>
 			</File>
