- Further optimized vehicle rendering (still not finished tho) - Fixed a Garbage Collection crash when a CClientRwFrame was being marked and its children or objects were destroyed in-between (when the GC thread yielded in CClientRwFrame::MarkGC) - Tweaked CVehicleModelInfoSAInterface::Setup to not drop render callbacks which were set previously

--- a/lua_interpret/lua_interpret.vcproj
+++ b/lua_interpret/lua_interpret.vcproj
@@ -156,10 +156,10 @@
 				IgnoreDefaultLibraryNames="LIBCMT.lib"
 				GenerateDebugInformation="true"
 				AssemblyDebug="2"
-				ProgramDatabaseFile="../../symbols/$(ConfigurationName)_$(SafeParentName).pdb"
-				GenerateMapFile="true"
-				MapFileName="lint_exp.exp"
-				MapExports="true"
+				ProgramDatabaseFile=""
+				GenerateMapFile="false"
+				MapFileName=""
+				MapExports="false"
 				TargetMachine="1"
 			/>
 			<Tool
