MTA:Lua and MTA:Eir optimizations (GrandCarma memory usage jumped from 100mb to less than 50mb; Anderius now 107mb [without LOD])

--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -1192,6 +1192,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\lua_interpret\luabitlib.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\lua_interpret\luafile.cpp"
 						>
 					</File>
@@ -2727,6 +2731,10 @@
 					</File>
 					<File
 						RelativePath="..\shared_logic\luadefs\CLuaTaskDefs.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\lua_interpret\luabitlib.h"
 						>
 					</File>
 					<File
