- Working on fixing infinite loop in atomic rendering - Rewrote RenderWare memory allocation system - Added entity fading alpha check functions (entity->GetFadingAlpha, entity->IsFading())
* I will come back to IRC when I have fixed this bug :)

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -743,6 +743,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CRenderWareSA.mem.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CRenderWareSA.pipeline.cpp"
 				>
 			</File>
@@ -1481,6 +1485,10 @@
 			</File>
 			<File
 				RelativePath=".\CRenderWareSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CRenderWareSA.mem.h"
 				>
 			</File>
 			<File
