--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -751,6 +751,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CRenderWareSA.render.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CRenderWareSA.rwapi.cpp"
 				>
 			</File>
@@ -1493,6 +1497,10 @@
 			</File>
 			<File
 				RelativePath=".\CRenderWareSA.pipeline.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CRenderWareSA.render.h"
 				>
 			</File>
 			<File
