- fixed ped animation bug - fixed vehicle control state management (now not clearing control states anymore, but switching modes) - fixed vehicle radio channel cycling - began reversing atomic rendering (in preparation to AngerMAN's lighting shader integration) - fixed MTA:Lua garbage collection issue (introduced several revisions prior) - improved control state logic in CKeyBinds - changed "bundeServer" command so it accepts a boolean whether to pack RwScenalizer or not
revision to sync with other clients; WIP, test-oriented

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -1063,7 +1063,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\RenderWare\RwMath.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\RenderWare\RwStream.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\RenderWare\RwTextureD3D9.cpp"
 				>
 			</File>
 			<Filter
@@ -1074,7 +1082,15 @@
 					>
 				</File>
 				<File
+					RelativePath=".\RenderWare\RwMath.h"
+					>
+				</File>
+				<File
 					RelativePath=".\RenderWare\RwStream.h"
+					>
+				</File>
+				<File
+					RelativePath=".\RenderWare\RwTextureD3D9.h"
 					>
 				</File>
 			</Filter>
