- fixed RenderWare renderstate awareness by querying states on device reset for updating. that im turn fixed renderstate screw up inside of the GTA:SA engine (somewhat). there still are rs errors to fix.

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -1102,6 +1102,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\RenderWare\RwInternals.h"
+					>
+				</File>
+				<File
 					RelativePath=".\RenderWare\RwMath.h"
 					>
 				</File>
