- added double writing/reading to MTA:Lua file API - fixed more RenderState screw-ups - improved vehicle alpha rendering (now vehicles look more beautiful when using setElementAlpha)

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -1079,6 +1079,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\RenderWare\RwRenderStates.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\RenderWare\RwStream.cpp"
 				>
 			</File>
@@ -1107,6 +1111,10 @@
 				</File>
 				<File
 					RelativePath=".\RenderWare\RwMath.h"
+					>
+				</File>
+				<File
+					RelativePath=".\RenderWare\RwRenderStates.h"
 					>
 				</File>
 				<File
