--- a/lua_interpret/lua_interpret.vcproj
+++ b/lua_interpret/lua_interpret.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".\;..\vendor\lua\src;..\vendor\zlib\;..\vendor\lua\;..\vendor;..\Shared\sdk;..\Shared;..\MTA10\mods\shared_logic;&quot;..\vendor\freetype-2.4.12\include&quot;;&quot;..\vendor\jpeg\jpeg-8d&quot;;..\vendor\opengl\"
+				AdditionalIncludeDirectories=".\;..\vendor\lua\src;..\vendor\zlib\;..\vendor\lua\;..\vendor;..\Shared\sdk;..\Shared;..\MTA10\mods\shared_logic;&quot;..\vendor\freetype-2.4.12\include&quot;;&quot;..\vendor\jpeg\jpeg-8d&quot;;..\vendor\opengl\;..\vendor\sparsehash\current\src;..\vendor\sparsehash\current\src\windows"
 				PreprocessorDefinitions="WIN32;_DEBUG"
 				RuntimeLibrary="3"
 				StructMemberAlignment="0"
@@ -66,7 +66,7 @@
 				AdditionalDependencies="lua5.1d.lib DbgHelp.lib zlibd_2008.lib freetype2412_D.lib libpng2008d.lib jpegd.lib libfs_d.lib"
 				OutputFile="$(OutDir)\lint_d.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="../vendor/lua/lib;../vendor/zlib/lib;&quot;..\vendor\freetype-2.4.12\objs\win32\vc2008\&quot;;../vendor/libpng/lib;../vendor/jpeg/lib;../FileSystem/lib"
+				AdditionalLibraryDirectories="../vendor/lua/lib;../vendor/zlib/lib;&quot;..\vendor\freetype-2.4.12\objs\win32\vc2008\&quot;;../vendor/libpng/lib;../vendor/jpeg/lib;../FileSystem/lib;../vendor/sparsehash/current/src"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames="LIBCMTD.lib"
 				GenerateDebugInformation="true"
@@ -127,7 +127,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories=".\;..\vendor\lua\src;..\vendor\zlib\;..\vendor\lua\;..\vendor;..\Shared\sdk;..\Shared;..\MTA10\mods\shared_logic;&quot;..\vendor\freetype-2.4.12\include&quot;;&quot;..\vendor\jpeg\jpeg-8d&quot;;..\vendor\opengl\"
+				AdditionalIncludeDirectories=".\;..\vendor\lua\src;..\vendor\zlib\;..\vendor\lua\;..\vendor;..\Shared\sdk;..\Shared;..\MTA10\mods\shared_logic;&quot;..\vendor\freetype-2.4.12\include&quot;;&quot;..\vendor\jpeg\jpeg-8d&quot;;..\vendor\opengl\;..\vendor\sparsehash\current\src;..\vendor\sparsehash\current\src\windows"
 				PreprocessorDefinitions="WIN32;NDEBUG"
 				StringPooling="true"
 				RuntimeLibrary="2"
