--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -803,6 +803,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CRenderWareSA.shader.cpp"
+				>
+			</File>
+			<File
 				RelativePath="CRestartSA.cpp"
 				>
 			</File>
@@ -1761,6 +1765,10 @@
 			</File>
 			<File
 				RelativePath=".\CRenderWareSA.rwapi.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CRenderWareSA.shader.h"
 				>
 			</File>
 			<File
