- imported license plate logic from MTA:BLUE - fixed some repository incompatibilities

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -935,6 +935,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CVehicleSA.customplate.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CVehicleSA.render.cpp"
 				>
 			</File>
@@ -1893,6 +1897,10 @@
 			</File>
 			<File
 				RelativePath=".\CVehicleModelInfoSA.render.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CVehicleSA.customplate.h"
 				>
 			</File>
 			<File
