--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -631,6 +631,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CObjectSA.render.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\COffsets.cpp"
 				>
 			</File>
@@ -1589,6 +1593,10 @@
 			</File>
 			<File
 				RelativePath="CObjectSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CObjectSA.render.h"
 				>
 			</File>
 			<File
