--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -10,6 +10,11 @@ preserveMainWorldIntegrity=false
 xOffset=0
 yOffset=0
 zOffset=1200
+; Decides whether the output should be written into a .zip archive
+zipOutput=true
+zipName=map.zip
+; Determines whether all the resources are zipped into a "resources.zip" file
+zipResources=true
 
 [MainGREEN]
 
