--- a/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj.filters
+++ b/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="StdInc.h">
       <Filter>Include</Filter>
     </ClInclude>
+    <ClInclude Include="resources.h">
+      <Filter>Include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="csv.cpp" />
