--- a/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj
+++ b/mta_gta3_modeL_replacer/src/mta-mod-imp/mta-mod-imp/mta-mod-imp.vcxproj
@@ -58,7 +58,7 @@
       <OutputFile>$(OutDir)ipl_mtaconv_d.exe</OutputFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalDependencies>kernel32.lib;zlibd_2008.lib;libfs_d.lib;advapi32.lib</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;libfs_d_2010.lib;advapi32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\..\..\..\vendor\zlib\lib;..\..\..\..\FileSystem\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -80,7 +80,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalDependencies>kernel32.lib;zlib_2008.lib;libfs.lib;advapi32.lib</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;libfs_2010.lib;advapi32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\..\..\..\vendor\zlib\lib;..\..\..\..\FileSystem\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -91,6 +91,7 @@
     <ClInclude Include="ide.h" />
     <ClInclude Include="ini.h" />
     <ClInclude Include="ipl.h" />
+    <ClInclude Include="resources.h" />
     <ClInclude Include="StdInc.h" />
     <ClInclude Include="syntax.h" />
   </ItemGroup>
